# SDLForms

./: CMakeLists.txt  LICENSE  README.md  TestForm1.cpp  TestForm1.h  main.cpp
Containers/: BorderStyle.h  Vector1.h  Vector2.h
Enums/: FormEnums.h
Events/: MouseEventArgs.h  MouseEventType.h  MouseMoveEventArgs.h
Forms/: Controls.cpp  Controls.h  Form.cpp  Form.h  IControl.h  IDrawable.h  IOwner.h
Forms/Interfaces/: IOwner.h
Graphics/: ColorManager.cpp  Renderer.cpp  Renderer.h  TextRenderer.cpp  TextRenderer.h
